<resources>
    <string name="app_name">AppBiblub</string>
    <string name="escolha_uma_das_op_es_abaixo_para_continuar">escolha uma das op es abaixo para continuar</string>
    <string name="entrar_no_app">Entrar</string>
    <string name="cadastrar_no_app">cadastrar</string>
    <string name="ou_continue_com">ou continue com</string>
    <string name="google_login">google_login</string>
    <string name="fundo">fundo_main</string>
    <string name="cadastro">cadastro</string>
    <string name="e_mail_registrado">email registrado</string>
    <string name="senha_registrada">senha registrada</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="bem_vindo_segunda_tela">Bem-vindo à Segunda Tela</string>
    <string name="title_activity_segunda_tela">SegundaTelaActivity</string>
    <string name="entrar">entrar</string>
    <string name="senha">Senha</string>
    <string name="e_mail">Email</string>
    <string name="login">Login</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="biblub">BIBLUB</string>
    <string name="nome_e_sobrenome">Nome e Sobrenome</string>
    <string name="bem_vindo_ao_biblub">Bem-vindo ao Biblub</string>
    <string name="preencha_as_informa_es_abaixo_para_continuar">Preencha as informações abaixo para continuar</string>
    <string name="e_mail_para_cadastro">E-MAIL</string>
    <string name="confirmar_e_mail">Confirmar e-mail</string>
    <string name="senha_para_cadastro">SENHA</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="avançar">Avançar</string>
</resources>